--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,65 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Importing Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Merriweather:wght@300;400;700;900&display=swap');
+
 body {
   background-color: #d4edda; /* You can replace this with the desired color */
-  font-family: Arial, sans-serif; /* Optional: for consistent font styling */
+  font-family: 'Roboto', sans-serif; /* Set Roboto as the default font for body */
   margin: 0;
   padding: 0;
 }
+
+/* Merriweather font styles for headings */
+.merriweather-light {
+  font-family: 'Merriweather', serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.merriweather-regular {
+  font-family: 'Merriweather', serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.merriweather-bold {
+  font-family: 'Merriweather', serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.merriweather-black {
+  font-family: 'Merriweather', serif;
+  font-weight: 900;
+  font-style: normal;
+}
+
+.merriweather-light-italic {
+  font-family: 'Merriweather', serif;
+  font-weight: 300;
+  font-style: italic;
+}
+
+.merriweather-regular-italic {
+  font-family: 'Merriweather', serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.merriweather-bold-italic {
+  font-family: 'Merriweather', serif;
+  font-weight: 700;
+  font-style: italic;
+}
+
+.merriweather-black-italic {
+  font-family: 'Merriweather', serif;
+  font-weight: 900;
+  font-style: italic;
+}
+
 /* Main container for form */
 .form-container {
   display: flex;
